--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,11 +1,15 @@
-%h1 Welcome to RankNStein!
+%p#heading Welcome to RankNStein!
 %form#main{ :action => '/rank', :method => 'get' }
-  When someone searches for ...
-  %br
-  %input#query{:type => 'text', :name => 'query', :size => 20}
   %p
-    my page at:
-  %input#url{:type => 'text', :name => 'url', :value => 'Enter URL ...', :size => 20}
-  %br
-  %input{:type => 'submit', :value => 'ranks ...'}
+    %label
+      When someone searches for ...
+    %br
+    %input#query{:type => 'text', :name => 'query', :size => 30}
+  %p
+    %label
+      my page at ...
+    %br
+    %input#url{:type => 'text', :name => 'url', :size => 30}
+  %p
+    %input{:type => 'submit', :class=> 'submit', :value => 'Ranks ...'}
  
