Added google analytics and paypal donation

--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -129,3 +129,13 @@ input {
   padding-top: .75em;
   font-size: 2em;
 }
+
+#donate {
+  float:right;
+  font-style: italic;
+  color: gray;
+}
+
+#donate form {
+  display: inline;
+}
