--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -12,4 +12,4 @@
     %input#url{:type => 'text', :name => 'url', :size => 30}
   %p
     %input{:type => 'submit', :class=> 'submit', :value => 'Ranks ...'}
- 
+= partial :analytics 
