Corrected style for donate blurb

--- a/app/views/rank.haml
+++ b/app/views/rank.haml
@@ -16,6 +16,7 @@
 #try_again
   %a{ :href => '/'}
     Try Again?
+.clr
 #donate
   RankNStein is a free service, but we do accept PayPal donations...
   %form{ :action => "https://www.paypal.com/cgi-bin/webscr", :method => "post" }
