Changed top titles to h1s and added meta tags

--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -105,7 +105,7 @@ p#result a {
   color: gray;
 }
 
-p#heading {
+h1#heading {
   font-family: Georgia, Times, serif;
   font-size: 5em;
   width: 60%;
