--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,4 +1,4 @@
-%p#heading Welcome to RankNStein!
+%h1#heading Welcome to RankNStein!
 %form#main{ :action => '/rank', :method => 'get' }
   %p
     %label
