--- a/app/views/rank.haml
+++ b/app/views/rank.haml
@@ -26,3 +26,4 @@
     / %input{ :id => 'donate_button', :type => "image", :src => "/images/pp_donate.png", :border => "0", :name => "submit", :alt => "PayPal - The safer, easier way to pay online!" }
     %img{ :alt => "", :border => "0", :src => "https://www.paypal.com/en_US/i/scr/pixel.gif", :width => "1", :height => "1" }
 = partial :analytics
+.clr
