Minor tweaks to styles

--- a/app/views/faq.haml
+++ b/app/views/faq.haml
@@ -32,7 +32,7 @@
   %dt Is the RankNStein number my "page rank"?
   %dd
     No. "Page Rank" is a 0-10 value, determined by a patented algorithm, that determines a webpage's relative
-    value in the eyes of Google. The RankNStein rank is much simpler, its indicates where in a given Google
+    value in the eyes of Google. The RankNStein rank is much simpler, it indicates where in a given Google
     search your webpage lands. When someone searches for "atlanta ruby programmer" the webpage at "http://atlrug.org/"
     will have a rank of 12 (at this time), meaning that it is the 12th entry in the search results returned by Google. 
     By default, Google displays 10 results per page, so the AtlRUG.org listing will be on the second page.
