--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -28,7 +28,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 body {
   line-height: 1;
   color: black;
-  background: white;
+  background: lightgreen;
 }
 ol, ul {
   list-style: none;
