--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -15,9 +15,9 @@
           %a{:href => '/faq'}
             FAQ
         %li
-          Copyright &copy;2009 
-          %a{:href => 'http://jadecove.com', :target => :new}
-            Jade Cove Solutions
+          Copyright &copy;2011 
+          %a{:href => 'http://billsiggelkow.com', :target => :new}
+            Bill Siggelkow
         %li
           %a{:href => 'http://github.com/bsiggelkow/ranknstein/issues', :target => :new}
             Support
