Facelift and update gems

--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -6,6 +6,7 @@
     %meta{ :content => "SEO, search engine optimization, SERP tool, page rank, keyword search", :name => 'keywords'}
     %title
       RankNStein
+    %link{ :href => 'http://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC', :rel => 'stylesheet', :type => 'text/css' }
     %link{ :href => "/stylesheets/main.css", :rel => "stylesheet", :media => "screen", :type => "text/css", :charset => "utf-8" }
   %body#ranknstein
     = yield
