--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -21,14 +21,20 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   font-family: inherit;
   vertical-align: baseline;
 }
+html {
+        background: url(/images/castle.png) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+}
 /* remember to define focus styles! */
 :focus {
   outline: 0;
 }
 body {
   line-height: 1;
-  color: black;
-  background: lightgreen;
+  color: #940101;
 }
 ol, ul {
   list-style: none;
@@ -52,8 +58,8 @@ blockquote, q {
 
 body {
   font-size: 87.5%;
-  font-family: Helvetica, Arial, sans-serif;
-  margin: 2em;
+  font-family: 'IM Fell Great Primer SC', serif;
+  margin: 6em;
 }
 
 form p {
@@ -62,10 +68,8 @@ form p {
 }
 
 p#rank {
-  font-family: Times;
   text-align: center;
   font-size: 20em;
-  color: #800517;
 }
 
 span.query {
@@ -79,27 +83,25 @@ p#result {
 }
 
 label {
-  font-family: Georgia, Times, serif;
   font-size: 2em;
-  color: black;
   text-align: center;
 }
 
 .submit {
-  font-family: Georgia, Times, serif;
+  color: black;
 }
 
 p#result a {
-  color: gray;
+  color: orange;
 }
 
 h1#heading {
-  font-family: Georgia, Times, serif;
   font-size: 5em;
-  width: 60%;
+  width: 70%;
   margin: 0.5em auto;
   text-align: center;
 }
+
 #try_again {
   text-align: center;
   font-size: 5em;
@@ -107,11 +109,11 @@ h1#heading {
 #try_again a {
   font-family: Georgia, Times, serif;
   width: 60%;
-  color: black;
   text-decoration: none;
   border-bottom: 1px dotted gray;
 }
 input {
+  color: gray;
   margin-top: .75em;
   padding-left: .75em;
   padding-top: .75em;
