Target = new for url link

--- a/app/views/rank.haml
+++ b/app/views/rank.haml
@@ -8,7 +8,7 @@
     %span.query
       = query
     and found
-    %a{:href => result[:url]}
+    %a{:href => result[:url],:target => 'new'}
       = result[:url]
 - else
   %h1#heading
